# relevance-feedback

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yaml  pytest.yml
qdrant_relevance_feedback/: __init__.py  relevance_feedback.py
qdrant_relevance_feedback/evaluate/: __init__.py  evaluate.py
qdrant_relevance_feedback/feedback/: __init__.py  fastembed_feedback.py
qdrant_relevance_feedback/retriever/: __init__.py  qdrant_retriever.py  retriever.py
qdrant_relevance_feedback/train/: train.py
relevance_feedback/: relevance_feedback.py
relevance_feedback/evaluate/: __init__.py  evaluate.py  metrics.py
relevance_feedback/feedback/: __init__.py  cohere_feedback.py  fastembed_feedback.py  feedback.py
relevance_feedback/retriever/: __init__.py  openai_retriever.py  qdrant_retriever.py  retriever.py
relevance_feedback/train/: naive_formula.py  train.py
tests/: test_relevance_feedback.py
