[project]
name = "relevance_feedback"
version = "0.1.0"
authors = [
  { name = "Qdrant Team", email = "info@qdrant.tech" },
  { name = "Evgeniya Sukhodolskaya", email = "evgeniya.sukhodolskaya@qdrant.tech" },
  { name = "George Panchuk", email = "george.panchuk@qdrant.tech" }
]
description = "Qdrant's relevance feedback model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=3.0.0; python_version>='3.11'",
    "pandas>=2.3.3,<3.0.0; python_version<'3.11'",
    "qdrant-client>=1.16.2",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
    "requests>=2.32.5",
]

[dependency-groups]
fastembed = [
    "fastembed>=0.7.4",
]
